Add content to the swagger spec as well

--- a/swagger-spec/wikis/content.yaml
+++ b/swagger-spec/wikis/content.yaml
@@ -1,1 +1,29 @@
-# /wikis/{wiki_id}/content/
+parameters:
+  - in: path
+    type: string
+    required: true
+    name: wiki_id
+    description: 'The unique identifier of the wiki.'
+  - in: path
+    type: string
+    required: true
+    name: node_id
+    description: 'The unique identifier of the node associated with the wiki.'
+
+get:
+  summary: Retrieve the Content of a Wiki
+  description: >-
+    Retrieves the plaintext content of a wiki in markdown format.
+
+    ####Returns
+
+    Returns `text/markdown` of the wiki content itself. 
+
+    If the request is unsuccessful, plaintext with the error message will be displayed.
+  tags:
+    - Wikis
+  operationId: wiki_content
+  x-response-schema: Wiki
+  responses:
+    '200':
+      description: 'OK'
