--- a/swagger-spec/nodes/wikis_list.yaml
+++ b/swagger-spec/nodes/wikis_list.yaml
@@ -23,6 +23,17 @@ get:
     If the request is unsuccessful, JSON with an `errors` key containing
     information about the failure will be returned. Refer to the [list of error codes]()
     to understand why this request may have failed.
+
+    #### Filtering
+
+    Wiki pages can be filtered based on their `name` and `date_modified` fields.
+    
+    + `filter[name]=<Str>` -- filter wiki pages by name
+
+    + `filter[date_modified][comparison_operator]=YYYY-MM-DDTH:M:S` -- filter wiki pages based on date modified.
+
+
+    Possible comparison operators include 'gt' (greater than), 'gte'(greater than or equal to), 'lt' (less than) and 'lte' (less than or equal to). The date must be in the format YYYY-MM-DD and the time is optional.
   tags:
     - Nodes
   operationId: nodes_wikis_list
