--- a/swagger-spec/introduction/versioning.yaml
+++ b/swagger-spec/introduction/versioning.yaml
@@ -3,26 +3,30 @@ get:
     Versioning can be specified in three different ways:
 
 
-    URL Path Versioning, e.g. `/v2/` or `/v3/`
+    #### URL Path Versioning
 
-    - A version specified via the URL path is a **required** part of the
+    + `/v2/` or `/v3/`
+
+    + A version specified via the URL path is a **required** part of the
     URL.
 
-    - Only a major version can be specified via the URL path, i.e.
+    + Only a major version can be specified via the URL path, i.e.
     `/v2.0.6/` is invalid, additionally, paths such as `/v2.0/` are invalid.
 
-    - If the default version of the API is within the major version
+    + If the default version of the API is within the major version
     specified in the URL path, the default version will be applied (i.e. if
     the default version is `2.3` and the URL path is `/v2/`, then version
     returned will be `2.3`).
 
-    - If the default version of the API is not within the major version
+    + If the default version of the API is not within the major version
     specified in the URL path, the URL path version will be applied (i.e. if
     the default version is `3.0` and the URL path is `/v2/`, then the
     version returned will be `2.0`)
 
 
-    Query Parameter Versioning, e.g. `/v2/nodes/?version=2.1.6`
+    #### Query Parameter Versioning
+
+    + `/v2/nodes/?version=2.1.6`
 
     + Pinning to a specific version via a query parameter is **optional**.
 
@@ -35,8 +39,9 @@ get:
     `/v2/nodes/?version=3.1.4` a 409 Conflict response will be returned.
 
 
-    Header Versioning, e.g.
-    `Accept-Header=application/vnd.api+json;version=3.0.1`
+    #### Header Versioning
+
+    + `Accept-Header=application/vnd.api+json;version=3.0.1`
 
     + Pinning to a specific version via request header is **optional**.
 
@@ -51,6 +56,7 @@ get:
     + If both a header version and query parameter version are specified,
     the versions must match exactly or a 409 Conflict response will be
     returned (i.e. one does not take precedence over the other).
+
   summary: Versioning
   responses:
     '200':
