--- a/swagger-spec/introduction/embedding.yaml
+++ b/swagger-spec/introduction/embedding.yaml
@@ -1,48 +1,6 @@
 get:
-  summary: Filtering and Embedding
+  summary: Embedding
   description: >-
-    #### Filtering
-
-    Entity collections can be filtered by adding a query parameter in the
-    form:
-
-
-    &nbsp;&nbsp;&nbsp;&nbsp;`filter[<fieldname>]=<matching information>`
-
-
-    String queries are filtered using substring matching. For example, if
-    you were trying to find [Lise Meitner](http://en.wikipedia.org/wiki/Lise_Meitner):
-
-
-    &nbsp;&nbsp;&nbsp;&nbsp;`/users/?filter[full_name]=meitn`
-
-
-    You can filter on multiple fields, or the same field in different ways, by &-ing the query parameters together.
-
-
-    &nbsp;&nbsp;&nbsp;&nbsp;`/users/?filter[full_name]=lise&filter[family_name]=mei`
-
-
-    Boolean fields should be queried with `true` or `false`.
-
-
-    &nbsp;&nbsp;&nbsp;&nbsp;`/nodes/?filter[registered]=true`
-
-
-    You can request multiple resources by filtering on id and placing comma-separated values in your query parameter.
-
-
-    &nbsp;&nbsp;&nbsp;&nbsp;`/nodes/?filter[id]=aegu6,me23a`
-
-
-    You can filter with case-sensitivity or case-insensitivity by using `contains` and `icontains`, respectively.
-
-
-    &nbsp;&nbsp;&nbsp;&nbsp;`/nodes/?filter[tags][icontains]=help`
-
-
-    #### Embedding
-
     All related resources that appear in the `relationships` attribute are embeddable,
     meaning it is possible to fetch a node and its contributors in a single request by adding a query parameter like:
 
