--- a/swagger-spec/introduction/entities.yaml
+++ b/swagger-spec/introduction/entities.yaml
@@ -1,51 +1,56 @@
 get:
   description: >-
-    An entity is a single resource that has been retrieved from the API, usually from an endpoint with the entity's id
-    as the final path part.  A successful response from an entity request will be a JSON object with a top level `data`
-    key pointing to a sub-object with the following members:
+    An entity is a single resource that has been retrieved from the API, usually from an endpoint with the entity's ID as the final path part.
+    A successful response from an entity request will be a JSON object with a top level `data` key pointing to a sub-object with the following members:
 
-    + `id`
+    #### ID
 
-    The identifier for the entity.  This MUST be included with [PUT and PATCH
-    requests](#formatting-postputpatch-request-bodies).
+    The identifier for the entity.  This **MUST** be included with [PUT and PATCH requests](TODO: link me).
 
-    + `type`
+    #### Type
 
-    The type identifier of this entity.  This MUST be included with [all create/update
-    requests](#formatting-postputpatch-request-bodies).
+    The type identifier of this entity.  This **MUST** be included with [all create/update requests](TODO: link me).
 
-    + `attributes`
+    #### Attributes
 
     The properties of the entity.  Names, descriptions, etc.
 
-    + `relationships`
+    #### Relationships
 
-    Relationships are urls to other entities or entity collections that have a relationship to the entity. For example,
-    the node entity provides a `contributors` relationship that points to the endpoint to retrieve all contributors to
-    that node.  It is recommended to use these links rather than to id-filter general entity collection endpoints.
-    They'll be faster, easier, and less error-prone.  Generally a relationship will have the following structure:
+    Relationships are URLs to other entities or entity collections that have a relationship to the entity.
+
+
+    For example, the node entity provides a `contributors` relationship that points to the endpoint to retrieve all contributors to that node.
+    It is recommended to use these links rather than to filter general entity collection endpoints by IDs.
+    They'll be faster, easier, and less error-prone.
+
+
+    Generally a relationship will have the following structure:
+
 
         {relationship_name}: {
-            "links": {
-                "related": {
-                    "href": {url_to_related_entity_or_entity_collection},
-                    "meta": {}
-                }
+          "links": {
+            "related": {
+              "href": {url_to_related_entity_or_entity_collection},
+              "meta": {}
             }
+          }
         }
+
 
     If there are no related entities, `href` will be null.
 
-    + `embeds`
+    #### Embeds
 
-    Please see `Embedding` documentation under `Requests`.
+    Please see the [embedding](TODO: link me) documentation.
 
-    + `links`
+    #### Links
 
-    Links are urls to alternative representations of the entity or actions that may be performed on the entity.  Most
-    entities will provide a `self` link that is the canonical endpoint for the entity where update and delete requests
-    should be sent.  In-depth documentation of actions is available by navigating to the `self` link in the Browsable
-    API.  Most entities will also provide an `html` link that directs to the entity's page on the [OSF](http://osf.io/).
+    Links are urls to alternative representations of the entity or actions that may be performed on the entity.
+
+
+    Most entities will provide a `self` link that is the canonical endpoint for the entity where update and delete requests should be sent.
+    Most entities will also provide an `html` link that directs to the entity's page on the [OSF](http://osf.io/).
 
 
   summary: Entities
