--- a/swagger-spec/introduction/entity_collections.yaml
+++ b/swagger-spec/introduction/entity_collections.yaml
@@ -1,23 +1,30 @@
 get:
   description: >-
-    Entity collection endpoints return a list of entities and an additional data structure with pagination links, such as
-    "next", "prev", "first", and "last". The OSF API limits all entity collection responses to a maximum of 10 entities.
+    Entity collection endpoints return a list of entities and an additional data structure with pagination links,
+    such as `next`, `prev`, `first`, and `last`.
+
+
+    The OSF API limits all entity collection responses to a maximum of 10 entities.
+
+
     The response object has two keys:
 
-    + `data`
+    #### Data
+
+    The `data` key is an array of entities that match the query.
 
 
-    `data` is an array of entities that match the query.  Each entity in the array is the same representation that is
-    returned from that entity's `self` link, meaning that refetching the entity is unnecessary.
+    Each entity in the array is the same representation that is returned from that entity's `self` link, meaning that refetching the entity is unnecessary.
 
-    + `links`
+    #### Links
+
+    The `links` key contains pagination information, including links to the previous, next, first, and last pages of results.
 
 
-    `links` contains pagination information, including links to the previous, next, first, and last pages of results.
-    The meta key contains the total number of entities available, as well as the current number of results displayed per
-    page.  If there are only enough results to fill one page, the `first`, `last`, `prev`, and `next` values will be
-    null.
+    The `meta` key contains the total number of entities available, as well as the current number of results displayed per page.
 
+
+    If there are only enough results to fill one page, the `first`, `last`, `prev`, and `next` values will be null.
 
   summary: Entity Collections
   responses:
