--- a/swagger-spec/introduction/errors.yaml
+++ b/swagger-spec/introduction/errors.yaml
@@ -1,14 +1,21 @@
 get:
   description: >-
+    When a request fails for any reason, the OSF API will return an appropriate HTTP error code and include a descriptive error in the body of the response.
 
-    When a request fails for whatever reason, the OSF API will return an appropriate HTTP error code and include a
-    descriptive error in the body of the response.  The response body will be an object with a key, `errors`, pointing
-    to an array of error objects.  Generally, these error objects will consist of a `detail` key with a detailed error
-    message and a `source` object that may contain a field `pointer` that is a [JSON
-    Pointer](https://tools.ietf.org/html/rfc6901) to the error-causing attribute. The `error` objects may include
-    additional information in accordance with the [JSON-API error spec](http://jsonapi.org/format/1.0/#error-objects).
 
-    #Example: Error response from an incorrect create node request
+    The response body will be a JSON object with a key, `errors`, pointing to an array of error objects.
+
+
+    Generally, these error objects will consist of a `detail` key with a detailed error message and a `source` object that may contain a field `pointer` that is a
+    [JSON Pointer](https://tools.ietf.org/html/rfc6901) to the error-causing attribute.
+
+
+    The `error` objects may include additional information in accordance with the [JSON-API error spec](http://jsonapi.org/format/1.0/#error-objects).
+
+
+    #### Example
+
+    An error response from an incorrect create node request:
 
         {
           "errors": [
