--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "swagger-ui",
   "author": "Tony Tam <fehguy@gmail.com>",
-  "contributors": [{
-    "name": "Mohsen Azimi",
-    "email": "me@azimi.me"
-  },
-  {
-    "name": "Fares Droubi",
-    "email": "fares.droubi@gmail.com"
-  }],
+  "contributors": [
+    {
+      "name": "Mohsen Azimi",
+      "email": "me@azimi.me"
+    },
+    {
+      "name": "Fares Droubi",
+      "email": "fares.droubi@gmail.com"
+    }
+  ],
   "description": "Swagger UI is a dependency-free collection of HTML, JavaScript, and CSS assets that dynamically generate beautiful documentation from a Swagger-compliant API",
   "version": "2.1.1-M2",
   "homepage": "http://swagger.io",
@@ -51,5 +53,8 @@
     "mocha": "^2.1.0",
     "selenium-webdriver": "^2.45.0",
     "swagger-client": "git+https://github.com/jensoleg/swagger-js.git"
+  },
+  "dependencies": {
+    "clipboard": "^1.6.0"
   }
 }
