--- a/swagger-spec/files/versions_list.yaml
+++ b/swagger-spec/files/versions_list.yaml
@@ -15,11 +15,11 @@ get:
 
 
     The `links` property contains JSON of links that can be used
-    for [pagination](http://jsonapi.org/format/1.0/#fetching-pagination).
+    for [pagination](#Introduction_pagination).
 
 
     If the request is unsuccessful, JSON with an `errors` key containing
-    information about the failure will be returned. Refer to the [list of error codes]()
+    information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
 
   parameters:
@@ -51,10 +51,10 @@ get:
             type: file_versions
             id: '1'
           links:
-            first: 
-            last: 
-            prev: 
-            next: 
+            first:
+            last:
+            prev:
+            next:
             meta:
               total: 1
               per_page: 10
