--- a/swagger-spec/citations/style_detail.yaml
+++ b/swagger-spec/citations/style_detail.yaml
@@ -11,7 +11,7 @@ get:
 
 
     If the request is unsuccessful, a dictionary with an `errors` property containing
-    information about the failure will be returned. Refer to the [list of error codes]()
+    information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
 
   parameters:
