--- a/swagger-spec/comments/detail.yaml
+++ b/swagger-spec/comments/detail.yaml
@@ -11,7 +11,7 @@ get:
 
 
     If the request is unsuccessful, JSON with an `errors` key containing
-    information about the failure will be returned. Refer to the [list of error codes]()
+    information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
 
   parameters:
@@ -89,7 +89,7 @@ put:
 
 
       If the request is unsuccessful, JSON with an `errors` key containing
-      information about the failure will be returned. Refer to the [list of error codes]()
+      information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
       to understand why this request may have failed.
 
   parameters:
@@ -128,7 +128,7 @@ delete:
 
 
     If the request is unsuccessful, a dictionary with an `errors` property containing
-    information about the failure will be returned. Refer to the [list of error codes]()
+    information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
 
   parameters:
