--- a/swagger-spec/nodes/list.yaml
+++ b/swagger-spec/nodes/list.yaml
@@ -16,7 +16,7 @@ get:
 
 
     The `links` property contains a dictionary of links that can be used
-    for [pagination](http://jsonapi.org/format/1.0/#fetching-pagination).
+    for [pagination](#Introduction_pagination).
 
 
     This request should never return an error.
@@ -213,7 +213,7 @@ post:
 
 
     If the request is unsuccessful, a dictionary with an `errors` property containing
-    information about the failure will be returned. Refer to the [list of error codes]()
+    information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
 
   parameters:
