--- a/swagger-spec/nodes/preprints_list.yaml
+++ b/swagger-spec/nodes/preprints_list.yaml
@@ -17,7 +17,7 @@ get:
     The `data` property contains an array of up to 10 preprints.
     Each resource in the array is a separate preprint object.
     The `links` property contains a dictionary of links that can be used
-    for [pagination](http://jsonapi.org/format/1.0/#fetching-pagination).
+    for [pagination](#Introduction_pagination).
 
   parameters:
     - in: path
