--- a/swagger-spec/nodes/wikis_list.yaml
+++ b/swagger-spec/nodes/wikis_list.yaml
@@ -14,7 +14,7 @@ get:
 
 
     If the request is unsuccessful, JSON with an `errors` key containing
-    information about the failure will be returned. Refer to the [list of error codes]()
+    information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
 
     #### Filtering
