--- a/swagger-spec/preprint_providers/preprints_list.yaml
+++ b/swagger-spec/preprint_providers/preprints_list.yaml
@@ -14,10 +14,10 @@ get:
     The `data` property contains an array of 10 preprints.
     Each resource in the array is a separate preprint object.
     The `links` property contains JSON with keys that can be used
-    for [pagination](http://jsonapi.org/format/1.0/#fetching-pagination).
+    for [pagination](#Introduction_pagination).
 
     If the request is unsuccessful, JSON with an `errors` key containing
-    information about the failure will be returned. Refer to the [list of error codes]()
+    information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
 
 
