--- a/swagger-spec/users/institutions_list.yaml
+++ b/swagger-spec/users/institutions_list.yaml
@@ -13,7 +13,7 @@ get:
 
 
     The `links` property contains a dictionary of links that can be used
-    for [pagination](http://jsonapi.org/format/1.0/#fetching-pagination).
+    for [pagination](#Introduction_pagination).
 
   tags:
     - Users
