--- a/swagger-spec/wikis/detail.yaml
+++ b/swagger-spec/wikis/detail.yaml
@@ -13,7 +13,7 @@ get:
 
 
     If the request is unsuccessful, JSON with an `errors` key containing
-    information about the failure will be returned. Refer to the [list of error codes]()
+    information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
 
   parameters:
