--- a/swagger-spec/institutions/users_list.yaml
+++ b/swagger-spec/institutions/users_list.yaml
@@ -39,11 +39,10 @@ get:
   responses:
     '200':
       description: OK
-      # TODO: Uncomment when valid
-      # schema:
-      #   type: array
-      #   items:
-      #     $ref: /swagger-spec/users/definition.yaml
+      schema:
+        type: array
+        items:
+          $ref: '../users/definition.yaml'
       examples:
         application/json:
           data:
