Add date_created field for file version

--- a/swagger-spec/files/version_definition.yaml
+++ b/swagger-spec/files/version_definition.yaml
@@ -18,6 +18,11 @@ properties:
         type: object
         readOnly: true
         description: 'MIME content-type for the file (null if unavailable).'
+      date_created:
+        type: string
+        format: date-time
+        readOnly: true
+        description: 'The date of the file version creation, as an iso8601 formatted timestamp.'
       size:
         type: integer 
         readOnly: true
