--- a/swagger-spec/preprint_providers/detail.yaml
+++ b/swagger-spec/preprint_providers/detail.yaml
@@ -114,6 +114,7 @@ get:
               email_contact: ''
               example: khbvy
               name: Open Science Framework
+              domain: 'osf.io'
             type: preprint_providers
             id: osf
           links:
