--- a/swagger-spec/nodes/institutions_list.yaml
+++ b/swagger-spec/nodes/institutions_list.yaml
@@ -1,1 +1,72 @@
 # /nodes/{node_id}/institutions/
+get:
+  summary: List all institutions
+  description: >-
+    List of all institutions affiliated with this node.
+
+    ####Returns
+    Returns a JSON object containing `data` and `links` keys.
+
+
+    The `data` key contains an array of up to 10 affilited institutions.
+    Each resource in the array is a separate institution object.
+
+
+    The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
+
+  parameters:
+    - in: path
+      name: node_id
+      type: string
+      required: true
+      description: 'The unique identifier of the node.'
+
+  tags:
+    - Nodes
+
+  operationId: nodes_institutions_list
+  x-response-schema: Institution
+  responses:
+    '200':
+      description: 'OK'
+      schema:
+        type: array
+        items:
+          $ref: '../institutions/definition.yaml'
+      examples:
+        application/json:
+          data:
+          - relationships:
+              nodes:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/institutions/cos/nodes/
+                    meta: {}
+              users:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/institutions/cos/users/
+                    meta: {}
+              registrations:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/institutions/cos/registrations/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/institutions/cos/
+            attributes:
+              auth_url:
+              logo_path: "/static/img/institutions/shields/cos-shield.png"
+              name: Center For Open Science
+              description: COS is a non-profit technology company providing free and open services
+                to increase inclusivity and transparency of research. Find out more at <a href="https://cos.io">cos.io</a>.
+            type: institutions
+            id: cos
+          links:
+            first:
+            last:
+            prev:
+            next:
+            meta:
+              total: 1
+              per_page: 10
