--- a/swagger-spec/nodes/linked_nodes_list.yaml
+++ b/swagger-spec/nodes/linked_nodes_list.yaml
@@ -1,1 +1,174 @@
-# /nodes/{node_id}/linked_nodes/
+osf.io# /nodes/{node_id}/linked_nodes/
+get:
+  summary: List all linked nodes
+  description: >-
+    List of all nodes linked to the given node.
+
+    Linked nodes are the nodes pointed to by node links.
+
+    ####Returns
+    Returns a JSON object containing `data` and `links` keys.
+
+
+    The `data` key contains an array of up to 10 nodes.
+    Each resource in the array is a separate node object.
+
+
+    The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
+
+    ####Filtering
+
+    You can optionally request that the response only include nodes that match your filters by utilizing the `filter` query parameter, e.g.
+    https://api.osf.io/v2/nodes/?filter[title]=reproducibility.
+
+
+    Nodes may be filtered by their `title`, `category`, `description`, `public`, `registration`, or `tags`.
+    `title`, `description`, and `category` are string fields and will be filteres using simple substring matching.
+    `public`, `registration` are boolean and can be filtered using truthy values, such as `true`, `false`, `0`, `1`.
+    `tags` is an array of simple strings.
+
+  parameters:
+    - in: path
+      name: node_id
+      type: string
+      required: true
+      description: 'The unique identifier of the node.'
+
+  tags:
+    - Nodes
+
+  operationId: nodes_linked_nodes_list
+  x-response-schema: Node
+  responses:
+    '200':
+      description: 'OK'
+      schema:
+        type: array
+        items:
+          $ref: 'definition.yaml'
+      examples:
+        application/json:
+          data:
+          - relationships:
+              files:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/files/
+                    meta: {}
+              view_only_links:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/view_only_links/
+                    meta: {}
+              citation:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/citation/
+                    meta: {}
+              draft_registrations:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/draft_registrations/
+                    meta: {}
+              contributors:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/contributors/
+                    meta: {}
+              forks:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/forks/
+                    meta: {}
+              root:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/
+                    meta: {}
+              identifiers:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/identifiers/
+                    meta: {}
+              comments:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/comments/?filter%5Btarget%5D=6q49d
+                    meta: {}
+              registrations:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/registrations/
+                    meta: {}
+              node_links:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/node_links/
+                    meta: {}
+              linked_nodes:
+                links:
+                  self:
+                    href: http://api.osf.io/v2/nodes/6q49d/relationships/linked_nodes/
+                    meta: {}
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/linked_nodes/
+                    meta: {}
+              wikis:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/wikis/
+                    meta: {}
+              affiliated_institutions:
+                links:
+                  self:
+                    href: http://api.osf.io/v2/nodes/6q49d/relationships/institutions/
+                    meta: {}
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/institutions/
+                    meta: {}
+              children:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/children/
+                    meta: {}
+              preprints:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/preprints/
+                    meta: {}
+              logs:
+                links:
+                  related:
+                    href: http://api.osf.io/v2/nodes/6q49d/logs/
+                    meta: {}
+            links:
+              self: http://api.osf.io/v2/nodes/6q49d/
+              html: http://osf.io/6q49d/
+            attributes:
+              category: project
+              fork: false
+              preprint: false
+              description: 'Awesome project description'
+              current_user_permissions:
+              - read
+              - write
+              - admin
+              date_modified: '2017-03-22T14:22:00.193773'
+              title: 'Awesome project title'
+              collection: false
+              registration: false
+              date_created: '2017-03-22T14:22:00.193773'
+              current_user_can_comment: true
+              node_license:
+              public: false
+              tags: []
+            type: nodes
+            id: 6q49d
+          links:
+            first: null
+            last: null
+            prev: null
+            next: null
+            meta: null
+              total: 1
+              per_page: 10
